src/objects/Item_do_Pedido__c.object
<CustomObject>
    <fields>
        <fullName>Embalagem__c</fullName>
        <label>Embalagem</label>
        <referenceTo>Embalagem__c</referenceTo>
        <relationshipLabel>Itens do Pedido</relationshipLabel>
        <relationshipName>Itens_do_Pedido</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Ovo__c</fullName>
        <label>Ovo</label>
        <referenceTo>Ovo__c</referenceTo>
        <relationshipLabel>Itens do Pedido</relationshipLabel>
        <relationshipName>Itens_do_Pedido</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Pre_o_Total_do_Item__c</fullName>
        <formula>CASE(Embalagem__r.Tipo_Qntde__c,
&quot;6&quot;,(Ovo__r.Pre_o_Un__c * 6 * Qtd_de_Caixas__c ),
&quot;10&quot;,(Ovo__r.Pre_o_Un__c * 10 * Qtd_de_Caixas__c),
&quot;12&quot;,(Ovo__r.Pre_o_Un__c * 12 * Qtd_de_Caixas__c),
&quot;15&quot;,(Ovo__r.Pre_o_Un__c * 15 * Qtd_de_Caixas__c),
&quot;18&quot;,(Ovo__r.Pre_o_Un__c * 18 * Qtd_de_Caixas__c),
&quot;30&quot;,(Ovo__r.Pre_o_Un__c * 30 * Qtd_de_Caixas__c),
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Preço Total do Item</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Qtd_de_Caixas__c</fullName>
        <label>Qtd de Caixas</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Item do Pedido</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Tudo</label>
    </listViews>
    <nameField>
        <label>Nome de Item do Pedido</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Itens do Pedido</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>